--- a/Simplilearn/phase5/Main Project/my-spring-boot-web/src/main/resources/public/index.html
+++ b/Simplilearn/phase5/Main Project/my-spring-boot-web/src/main/resources/public/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <head>
-<title>Gadhe Hariharan's Assessment</title>
+<title>Mallethula Bhavani's Assessment</title>
 
 <!-- Bootstrap -->
 <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet" />
@@ -17,7 +17,7 @@
 		<div id="content">
 			<div id="about">
 				<h1>
-					<div style='float: left; margin-bottom: 14px;'>Gadhe Hariharan's
+					<div style='float: left; margin-bottom: 14px;'>Mallethula Bhavani's
 					</div>
 					<div class="stage">
 						<div class="pyramid3d">
@@ -44,7 +44,7 @@
 					<li><a>Jenkins</a></li>
 					<li><a>AWS EC2/ Virtual machine</a></li>
 				</ul>
-				<p>Feel free to contact Gadhe Hariharan with any new requests or
+				<p>Feel free to contact Mallethula Bhavani with any new requests or
 					upgrades to this product!</p>
 			</div>
 		</div>
